--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ easypyspin = {git = "https://github.com/elerac/EasyPySpin"}
 opencv-python = "^4.4.0"
 numpy = "^1.19.2"
 spinnaker-python = {path = "spinnaker_python-2.0.0.147-cp38-cp38-win_amd64.whl"}
+scipy = "^1.5.2"
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
