--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ spinnaker-python = {path = "spinnaker_python-2.0.0.147-cp38-cp38-win_amd64.whl"}
 scipy = "^1.5.2"
 tqdm = "^4.50.0"
 pandas = "^1.1.2"
+colour-demosaicing = "^0.1.5"
+nptyping = "^1.3.0"
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
