--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,6 @@ authors = ["Your Name <you@example.com>"]
 python = "^3.8"
 aries-python = {git = "https://github.com/2-propanol/aries_python"}
 easypyspin = {git = "https://github.com/elerac/EasyPySpin"}
-opencv-python = "^4.4.0"
 numpy = "^1.19.2"
 spinnaker-python = {path = "spinnaker_python-2.0.0.147-cp38-cp38-win_amd64.whl"}
 scipy = "^1.5.2"
@@ -16,10 +15,12 @@ tqdm = "^4.50.0"
 pandas = "^1.1.2"
 colour-demosaicing = "^0.1.5"
 nptyping = "^1.3.0"
+opencv-contrib-python = "^4.4.0"
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
 ptpython = "^3.0.7"
+matplotlib = "^3.3.2"
 
 [build-system]
 requires = ["poetry>=0.12"]
