--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,10 +6,9 @@ authors = ["Your Name <you@example.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
-aries-python = {git = "https://github.com/2-propanol/aries_python"}
+aries-controller = "^0.5.0"
 easypyspin = {git = "https://github.com/elerac/EasyPySpin"}
 numpy = "^1.19.2"
-spinnaker-python = {path = "spinnaker_python-2.0.0.147-cp38-cp38-win_amd64.whl"}
 scipy = "^1.5.2"
 tqdm = "^4.50.0"
 pandas = "^1.1.2"
