--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,9 @@ authors = ["Your Name <you@example.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
-aries-controller = "^0.5.0"
+aries_controller = "^0.6.0"
 easypyspin = {git = "https://github.com/elerac/EasyPySpin"}
-numpy = "^1.19.2"
+numpy = "1.19.3"
 scipy = "^1.5.2"
 tqdm = "^4.50.0"
 pandas = "^1.1.2"
@@ -16,6 +16,7 @@ colour-demosaicing = "^0.1.5"
 nptyping = "^1.3.0"
 opencv-contrib-python = "^4.4.0"
 matplotlib = "^3.3.2"
+spinnaker-python = {path = "spinnaker_python-2.2.0.48-cp38-cp38-win_amd64.whl"}
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
