--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,21 +6,20 @@ authors = ["Your Name <you@example.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
-aries_controller = "^0.6.0"
+aries_controller = "^0.6"
 easypyspin = {git = "https://github.com/elerac/EasyPySpin"}
-numpy = "1.19.3"
-scipy = "^1.5.2"
-tqdm = "^4.50.0"
-pandas = "^1.1.2"
+numpy = "^1.19"
+scipy = "^1.5"
+tqdm = "^4.50"
+pandas = "^1.1"
 colour-demosaicing = "^0.1.5"
-nptyping = "^1.3.0"
-opencv-contrib-python = "^4.4.0"
-matplotlib = "^3.3.2"
-spinnaker-python = {path = "spinnaker_python-2.2.0.48-cp38-cp38-win_amd64.whl"}
+nptyping = "^1.3"
+opencv-contrib-python = "^4.4"
+matplotlib = "^3.3"
 
 [tool.poetry.dev-dependencies]
-black = "^20.8b1"
-ptpython = "^3.0.7"
+black = "*"
+ptpython = "^3"
 
 [build-system]
 requires = ["poetry>=0.12"]
